--- a/NetCDFConverter/nbproject/project.properties
+++ b/NetCDFConverter/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/NetCDFConverter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.netcdfAll-4.3.jar=/Users/nullzine/javaLib/netcdfAll-4.3.jar
+file.reference.netcdfAll-4.3.jar=lib/netcdfAll-4.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
